--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3107,8 +3107,8 @@
 			}
 
 		.wrapper.style2 {
-			background-color: #3498db;
-			color: #aed6f1;
+			background-color: #BDECB6;
+			color: #999999;
 		}
 
 			.wrapper.style2 input, .wrapper.style2 select, .wrapper.style2 textarea {
@@ -3128,7 +3128,7 @@
 			}
 
 			.wrapper.style2 h1, .wrapper.style2 h2, .wrapper.style2 h3, .wrapper.style2 h4, .wrapper.style2 h5, .wrapper.style2 h6 {
-				color: #fff;
+				color: #000;
 			}
 
 			.wrapper.style2 blockquote {
@@ -3154,7 +3154,7 @@
 			.wrapper.style2 button,
 			.wrapper.style2 .button {
 				background-color: #fff;
-				color: #3498db !important;
+				color: #29a81e !important;
 			}
 
 				.wrapper.style2 input[type="submit"].alt,
@@ -3319,7 +3319,7 @@
 			}
 
 			.wrapper.style2 .image {
-				box-shadow: 0px 0px 0px 7px #3498db, 0px 0px 0px 8px rgba(255, 255, 255, 0.25);
+				box-shadow: 0px 0px 0px 7px #fff, 0px 0px 0px 8px rgba(0, 0, 0, 0.1);
 			}
 
 		@media screen and (max-width: 1280px) {
@@ -3916,3 +3916,4 @@
 			}
 
 		}
+
